--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
+/************** Variables **************/
+:root {
+  --peach: #EFC69B;
+  --amaranthPurple: #AF1B3F;
+  --englishViolet: #473144;
+  --khaki: #CCB69B;
+  --buff: #DF9B6D;
+}
+
+/************** Custom Font **************/
+@font-face {
+  font-family: Centra;
+  src: url('./assets/font/CentraNo2-Bold.ttf');
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: Centra;
+  src: url('./assets/font/CentraNo2-Medium.ttf');
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: Centra;
+  src: url('./assets/font/CentraNo2-Book.ttf');
+  font-weight: 400;
+}
+
+/************** Default CSS **************/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-weight: 400;
+  overflow-x: hidden;
+  position: relative;
+  background-color: var(--englishViolet) !important;
+  color: #fff !important;
+  font-family: 'Centra', sans-serif !important;
+}
+
+/************** Navbar **************/
+#my-navbar {
+  background-color: var(--peach) !important;
+}
+
+/************** Home **************/
+#home {
+  background-color: var(--buff);
+}
+
+.home-container {
+  margin: auto;
+  width: 50%;
+  display: flex;
+}
+
+/************** Skills **************/
+#skills {
+  background-color: var(--amaranthPurple);
+}
+
+/************** Projects **************/
+#projects {
+  background-color: var(--peach);
+}
+
+/************** Contact **************/
+#contact {
+  background-color: var(--khaki);
+}
+
+section {
+  min-height: 100vh;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
