Theme saves locally

--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,10 @@ section {
   background-color: var(--main-color) !important;
 }
 
+#my-navbar .dropdown-menu a:active {
+  background-color: var(--main-color) !important;
+}
+
 /************** Home **************/
 .home-container {
   margin: auto;
