--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,10 @@ section {
   text-align: center;
 }
 
+#about-row, #contact-row, #projects-row, #skills-row {
+  margin-top: 5rem;
+}
+
 /* This is for styling the text */
 
 .style-text-main-color {
@@ -154,9 +158,7 @@ section {
 
 
 /************** About **************/
-#about-row {
-  margin-top: 5rem;
-}
+
 
 /************** Contact **************/
 
