--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 /************** Custom Font **************/
 @font-face {
+  font-family: Yellowtail;
+  src: url('./assets/font/Yellowtail-Regular.ttf');
+  font-weight: 400;
+}
+
+@font-face {
   font-family: Centra;
   src: url('./assets/font/CentraNo2-Bold.ttf');
   font-weight: 700;
@@ -141,6 +147,10 @@ section {
 
 .navbar-toggler {
   background-color: var(--sub-color) !important;
+}
+
+#logo-font {
+  font-family: 'Yellowtail', sans-serif !important;
 }
 
 /************** Home **************/
